Move the Maven build system & Remove trash code